--- a/src/app/components/busador/busador.component.html
+++ b/src/app/components/busador/busador.component.html
@@ -1,7 +1,7 @@
 <h1 class="text-center text-success"> Buscando <small>{{termino}}</small></h1>
 <hr>
 
-<div  class="row animated fadeIn" *ngIf="heroe.length ==0" >
+<div  class="row animated fadeIn" *ngIf="heroes.length ==0" >
   <div class="col-md-12">
     <div class="alert alert-info" role="alert">
       No existen resultados con el término:  {{termino}}
@@ -9,9 +9,10 @@
   </div>
 
 </div>
+
 <div class="card-columns">
 
-  <div class="card animated fadeIn fast" *ngFor="let unHeroe of heroe; let i=index">
+ <!-- <div class="card animated fadeIn fast" *ngFor="let unHeroe of heroes; let i=index">
     <img class="card-img-top img-fluid" [src]="unHeroe.img" [alt]="unHeroe.nombre">
     <div class="card-body">
       <h5 class="card-title">{{ unHeroe.nombre }}</h5>
@@ -22,6 +23,10 @@
         Ver más...
       </button>
     </div>
+
+  </div>-->
+  <app-heroe-tarjeta [heroe]="foo" [index]="foo.idx" *ngFor="let foo of heroes"> </app-heroe-tarjeta>
   </div>
 
-</div>
+  <!--<app-heroe-tarjeta [heroe]="foo" [index]="foo.idx" *ngFor="let foo of herores"> </app-heroe-tarjeta>-->
+
