se desarrolla formularios por template y data con algunos errores en los estilos.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,11 @@
         <a class="nav-link" [routerLink]="['heroes']"> Heroes</a>
       </li>
       <li class="nav-item" routerLinkActivate="activate">
-        <a class="nav-link" [routerLink]="['about']">About</a>
+        <a class="nav-link" [routerLink]="['about']">Template</a>
+      </li>
+
+      <li class="nav-item" routerLinkActivate="activate">
+        <a class="nav-link" [routerLink]="['data']">Data</a>
       </li>
     </ul>
     
