--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,129 @@
-<h1 class="animated fadeIn fast">Sobre Comic App</h1>
-<hr>
-<p class="animated fadeIn"> 
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fugit repellat voluptatibus fugiat repellendus,
-  reprehenderit, atque accusantium illum totam labore ut quo illo magni ipsam reiciendis non velit! Ut, hic.
-</p>
+<div class="container m-5">
+  <h4>Formularios <small> Utilizando el template</small></h4>
+  <hr>
+  <form (ngSubmit)="guardar(forma)" #forma="ngForm" novalidate="">
+
+    <div>
+
+      <div class="form-group row">
+        <label class="col-2 col-form-label">Nombre</label>
+        <div class="col-8">
+
+          <input class="form-control"
+            [ngClass]="{'is-invalid': (nombre.errors?.required || nombre.errors?.required) && nombre.touched}"
+            type="text" placeholder="Nombre" name="nombre" [(ngModel)]="usuario.nombre" minlength="5" required
+            #nombre="ngModel">
+
+          <div *ngIf="nombre.errors?.required"
+            [ngClass]="{'invalid-feedback': nombre.errors?.required && nombre.touched } ">
+            Este campo es requerido.
+          </div>
+
+          <div *ngIf="nombre.errors?.minlength">
+            Por lo menos {{nombre.errors.minlength.requiredLength}} caracteres
+          </div>
+
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-2 col-form-label">Apellido</label>
+        <div class="col-8">
+
+          <input class="form-control" type="text" placeholder="Apellido" name="apellido" [(ngModel)]="usuario.apellido"
+            required #apellido="ngModel">
+          <div *ngIf="apellido.errors?.required"
+            [ngClass]="{'invalid-feedback': apellido.errors?.required && apellido.touched } ">
+            Este campo es requerido.
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Correo</label>
+      <div class="col-md-8">
+
+        <input class="form-control" type="email" placeholder="Correo electrónico" name="coreo"
+          [(ngModel)]="usuario.correo" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" #correo="ngModel">
+        <div *ngIf="correo.errors?.required">
+          Este campo es requerido.
+        </div>
+        <div *ngIf="correo.errors?.pattern">
+          Este campo no tiene formato requerido.
+        </div>
+      </div>
+
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Pais</label>
+      <div class="col-md-8">
+        <select [(ngModel)]="usuario.pais" class="form-control" name="pais">
+          <option value="">Seleccione un país </option>
+          <option *ngFor="let pais of paises" [value]="pais.codigo">{{pais.nombre}}</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Sexo</label>
+      <div class="col-md-8">
+
+          <label class="custom-control custom-radio">
+              <input [(ngModel)]="usuario.sexo"
+                  name="sexo" 
+                  value="Hombre" 
+                  type="radio"
+                  class="custom-control-input">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description"> Hombre </span>
+            </label>
+
+
+ <!--          <div class="form-check-inline">
+              <label class="form-check-label" for="radio1">
+                <input [(ngModel)]="usuario.sexo"
+                name="sexo" 
+                value="Hombre" 
+                type="radio"
+                class="form-check-input"
+                >Hombre
+              </label>
+            </div> -->
+        
+
+<!--          <div *ngFor="let s of sexos; let index=index" class="custom-control custom-radio">
+            <input 
+              [(ngModel)]="usuario.sexo"
+              type="radio" 
+              [id]="index" 
+              name="chkSexo" 
+              class="custom-control-input" 
+              [value]="s.codigo">
+            <label class="custom-control-label" [for]="index">{‌{ s.nombre }}</label>
+          </div> -->
+
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">&nbsp;</label>
+      <div class="input-group col-md-8">
+          <!--[disabled]="!forma.valid"-->
+        <button  type="submit" class="btn btn-outline-primary">
+          Guardar
+        </button>
+      </div>
+    </div>
+
+  </form>
+
+  <pre>
+    {{ usuario| json }}
+  </pre>
+
+
+
+</div>
