--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -3,19 +3,20 @@
   <hr>
   <form [formGroup]="forma" (ngSubmit)="guardarCambios()">
 
-    <div>
+    <div formGroupName="nombreCompleto">
+      <!--[ngClass]="{'is-invalid': !forma.controls['nombre'].valid}"-->
 
-      <div class="form-group row" [ngClass]="{'is-invalid': !forma.controls['nombre'].valid}">
+      <div class="form-group row" >
         <label class="col-2 col-form-label">Nombre</label>
         <div class="col-8">
 
           <input class="form-control" type="text" placeholder="Nombre" 
                 formControlName="nombre">
 
-          <div  *ngIf="forma.controls['nombre'].errors?.required"> 
+          <div  *ngIf="forma.get('nombreCompleto.nombre').errors?.required"> 
               Este campo es requerido.
           </div>
-          <div  *ngIf="forma.controls['nombre'].errors?.minlength"> 
+          <div  *ngIf="forma.get('nombreCompleto.nombre').errors?.minlength"> 
               Por lo menos 4 caracteres.
           </div>
 
@@ -25,8 +26,12 @@
       <div class="form-group row">
         <label class="col-2 col-form-label">Apellido</label>
         <div class="col-8">
+          <input class="form-control" type="text" placeholder="Apellido" 
+                  formControlName="apellido">
 
-          <input class="form-control" type="text" placeholder="Apellido" formControlName="apellido">
+            <div  *ngIf="forma.get('nombreCompleto.apellido').errors?.required"> 
+              Este campo es requerido.
+          </div>
         </div>
       </div>
 
@@ -41,15 +46,72 @@
     </div>
 
 
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Pasatiempos</label>
+      <div class="col-md-8" formArrayName="pasatiempos">
+
+        <input *ngFor="let pasatiempo of forma.controls['pasatiempos'].controls; let i = index"
+         [formControlName]="i"
+          type="text"
+          class="form-control">
+      </div>
+
+      <button (click)="agregarPasatiempos()"
+       type="button" class="btn btn-primary">Nuevo </button>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Password</label>
+        <div class="col-md-8">
+  
+          <input 
+          class="form-control"
+           type="password" 
+           placeholder="password"
+            formControlName="password1">
+        </div>
+      </div>
+
+      
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Repetir Password</label>
+        <div class="col-md-8">
+  
+          <input 
+          class="form-control"
+           type="password" 
+           placeholder="Repetir"
+            formControlName="password2">
+        </div>
+      </div>
+
+    <div class="form-group row">
+        <label class="col-2 col-form-label">User Name</label>
+        <div class="col-md-8">
+  
+          <input 
+          class="form-control"
+           type="text" 
+           placeholder="Usuario"
+            formControlName="username">
+        </div>
+      </div>
+
+
+      
 
     <div class="form-group row">
       <label class="col-2 col-form-label">&nbsp;</label>
       <div class="input-group col-md-8">
         <button type="submit" class="btn btn-outline-primary">
-          Guardar
+           Guardar
         </button>
       </div>
     </div>
+
     {{forma.valid}}
+
+    <br>
+    {{forma.status}}
   </form>
 </div>
